Ajustes
Ajuste de formatação e adição de plugin jacoco.